--- a/main.css
+++ b/main.css
@@ -47,3 +47,72 @@
     border shorthand
     border: border-width border-style border-color;
 */
+
+
+.font {
+    font-family: 'Tahoma';
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.text_align {
+    text-align: center;
+}
+
+/* this is how we import fonts in css*/
+@font-face {
+    font-family: "IranSans";
+    src:
+            url("fonts/IranSans.woff2") format("woff2"),
+            url("fonts/IranSans.woff") format("woff");
+}
+
+/* pseudo classes */
+/*
+    :link
+    :visited
+    :hover
+    :focus
+    :active
+*/
+
+a:link {
+    background-color: #2196F3;
+}
+
+
+
+/* list styles */
+ol {
+    line-height: 2;
+    list-style-type: arabic-indic;
+    list-style-position: inside;
+}
+
+ul {
+    list-style-image: url('star.svg');
+}
+
+
+/* padding */
+#padding {
+    width: 300px;
+    background-color: lightcyan;
+    border: 1px solid black;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    /* padding shorthand */
+    /* padding: top right bottom left; */
+}
+
+p {
+    border: 1px solid black;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    /* margin shorthand */
+    /* margin: top right bottom left; */
+}
